# keasyditor

./: .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE  Makefile  README.md  keasyditor.desktop  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/keasyditor/: CHANGELOG.md  Cargo.toml
crates/keasyditor-core/: Cargo.toml
crates/keasyditor-core/assets/: KvFlat.LICENSE
crates/keasyditor-core/src/: constants.rs  lib.rs  undo_redo.rs
crates/keasyditor-core/src/color/: mod.rs
crates/keasyditor-core/src/ini/: mod.rs  parser.rs  serializer.rs
crates/keasyditor-core/src/models/: mod.rs
crates/keasyditor-core/src/models/klassy/: config.rs  enums.rs  mod.rs  preset.rs  schema.rs
crates/keasyditor-core/src/models/kvantum/: colors.rs  config.rs  general.rs  mod.rs  section.rs
crates/keasyditor-core/src/services/: file_service.rs  klassy_service.rs  kvantum_preview_capture.rs  kvantum_service.rs  matugen_service.rs  mod.rs  process_service.rs  theme_discovery.rs  wallpaper_apply_service.rs
crates/keasyditor-core/src/svg/: mod.rs
crates/keasyditor/assets/fonts/: OFL.txt
crates/keasyditor/src/: i18n.rs  main.rs  message.rs  theme.rs
crates/keasyditor/src/locale/: en.toml  ru_RU.toml
crates/keasyditor/src/ui/: home.rs  mod.rs  settings.rs  shell.rs
crates/keasyditor/src/ui/klassy/: editor.rs  mod.rs  preset_picker.rs  preview.rs  tabs.rs
crates/keasyditor/src/ui/kvantum/: editor.rs  mod.rs  preview.rs  svg_panel.rs  tabs.rs  theme_picker.rs
crates/keasyditor/src/ui/widgets/: canvas_utils.rs  collapsible.rs  color_picker.rs  color_utils.rs  fields.rs  mod.rs  topbar.rs
docs/: README_ru.md
packaging/: build.sh
packaging/appimage/: Dockerfile
packaging/archlinux/: Dockerfile  PKGBUILD
packaging/debian/: Dockerfile
packaging/fedora/: Dockerfile  keasyditor.spec
packaging/ubuntu/: Dockerfile
test_fixtures/klassy/: sample_klassyrc
(+5 files in other folders)
