[package]
name = "keasyditor-core"
version = "0.1.1"
edition = "2026"
description = "Core library for KEasyDitor — KDE theme editor"

[dependencies]
quick-xml = "0.37"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
strum = { version = "0.27", features = ["derive"] }
